--- a/view/UI_MainWindow.ui
+++ b/view/UI_MainWindow.ui
@@ -11,132 +11,107 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>PyQt5 学习</string>
+   <string>考勤</string>
   </property>
   <property name="dockNestingEnabled">
    <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>130</y>
-      <width>331</width>
-      <height>281</height>
-     </rect>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>331</width>
-      <height>16777215</height>
-     </size>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="res/testRes.qrc">:/test/user.jpg</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>210</y>
-      <width>271</width>
-      <height>131</height>
+      <x>230</x>
+      <y>80</y>
+      <width>441</width>
+      <height>361</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
+      <widget class="QLabel" name="label">
+       <property name="styleSheet">
+        <string notr="true">color:rgb(255, 0, 0);
+font: 36pt &quot;黑体&quot;;</string>
        </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <layout class="QFormLayout" name="formLayout">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>账号：</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>密码：</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit_username"/>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="lineEdit_password"/>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_login">
        <property name="text">
-        <string>登录</string>
+        <string>主界面</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_insert">
+       <property name="styleSheet">
+        <string notr="true">background-color:#FFFFFF;
+height:40px;
+font: 25 18pt &quot;等线 Light&quot;;
+border:1px solid #00FF00;
+border-radius:25px;</string>
+       </property>
+       <property name="text">
+        <string>录入数据</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_train">
+       <property name="styleSheet">
+        <string notr="true">background-color:#FFFFFF;
+height:40px;
+font: 25 18pt &quot;等线 Light&quot;;
+border:1px solid #00FF00;
+border-radius:25px;</string>
+       </property>
+       <property name="text">
+        <string>训练数据</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_run">
+       <property name="styleSheet">
+        <string notr="true">background-color:#FFFFFF;
+height:40px;
+font: 25 18pt &quot;等线 Light&quot;;
+border:1px solid #00FF00;
+border-radius:25px;</string>
+       </property>
+       <property name="text">
+        <string>开始考勤</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_simple">
+       <property name="styleSheet">
+        <string notr="true">background-color:#FFFFFF;
+height:40px;
+font: 25 18pt &quot;等线 Light&quot;;
+border:1px solid #00FF00;
+border-radius:25px;</string>
+       </property>
+       <property name="text">
+        <string>单人考勤</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_multiple">
+       <property name="styleSheet">
+        <string notr="true">background-color:#FFFFFF;
+height:40px;
+font: 25 18pt &quot;等线 Light&quot;;
+border:1px solid #00FF00;
+border-radius:25px;</string>
+       </property>
+       <property name="text">
+        <string>多人考勤</string>
        </property>
       </widget>
      </item>
     </layout>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>50</y>
-      <width>681</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">font: 36pt &quot;黑体&quot;;
-color:rgb(255, 0, 0);
-border-radius:5px;</string>
-    </property>
-    <property name="text">
-     <string>欢迎使用素描图象生成器</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -152,7 +127,8 @@ border-radius:5px;</string>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="res/testRes.qrc"/>
+  <include location="../res/testRes.qrc"/>
+  <include location="../res/testRes.qrc"/>
  </resources>
  <connections/>
 </ui>
