--- a/view/UI_Mutiple_Dialog.ui
+++ b/view/UI_Mutiple_Dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>单人考勤</string>
+   <string>多人考勤</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -27,7 +27,7 @@
 font: 36pt &quot;黑体&quot;;</string>
    </property>
    <property name="text">
-    <string>单人考勤</string>
+    <string>多人考勤</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -62,7 +62,7 @@ font: 36pt &quot;黑体&quot;;</string>
     <bool>false</bool>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
