--- a/view/UI_RunDialog.ui
+++ b/view/UI_RunDialog.ui
@@ -129,6 +129,58 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="pushButton_start">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>240</y>
+     <width>251</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:#FFFFFF;
+height:40px;
+font: 25 18pt &quot;等线 Light&quot;;
+border:1px solid #00FF00;
+border-radius:25px;</string>
+   </property>
+   <property name="text">
+    <string>开始</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="layoutWidget_2">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>10</y>
+     <width>309</width>
+     <height>33</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_6">
+    <item>
+     <widget class="QLabel" name="label_9">
+      <property name="styleSheet">
+       <string notr="true">font: 25 18pt &quot;等线 Light&quot;;</string>
+      </property>
+      <property name="text">
+       <string>考勤次数：</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_10">
+      <property name="styleSheet">
+       <string notr="true">font: 25 18pt &quot;等线 Light&quot;;</string>
+      </property>
+      <property name="text">
+       <string>未开始</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections/>
